--- a/thesis/result.tex
+++ b/thesis/result.tex
@@ -1,6 +1,6 @@
 \section{Result}
 
-\subsection{On the size of problem input}
+\subsection{On the size of the problem input}
 The input to a particular instance of the k-cleared-cells problem is the game $G = (B_0, P_1, \ldots, P_p)$. In order to analyze the verifiability of a given solution in polynomial time, we must begin by examining the size $|G|$. The game contains on gameboard $B_0$ of size $|B| = mn$, and $p$ block states which are all of constant size. Hence of the size of all the blocks state are $O(p)$. Thus $|G| \in O(p \cdot |B|)$.
 
 \subsection{On the size of the problem solution}
