--- a/pkg/cells.tex
+++ b/pkg/cells.tex
@@ -93,3 +93,19 @@
     \welltop{#1}{#2+2}
     \wellopen{#1}{#2+6}
 }
+
+\newcommand{\startb}[2]
+{
+    \cellb{#1}{#2}
+    \cellw{#1+1}{#2}
+    \cellb{#1}{#2+1}
+    \cellw{#1+1}{#2+1}
+}
+
+\newcommand{\middleb}[2]
+{
+    \cellw{#1}{#2}
+    \cellb{#1+1}{#2}
+    \cellw{#1}{#2+1}
+    \cellb{#1+1}{#2+1}
+}
