block placement phase 1

--- a/pkg/cells.tex
+++ b/pkg/cells.tex
@@ -69,6 +69,14 @@
     \wellclosed{#1}{#2+8}
 }
 
+\newcommand{\wellopenwhole}[2]
+{
+    \wellbot{#1}{#2}
+    \draw[dotted] (#1+2, #2+2) -- (#1+2, #2+4);
+    \welltop{#1}{#2+4}
+    \wellopen{#1}{#2+8}
+}
+
 \newcommand{\welldetailed}[2]
 {
     \wellbot{#1}{#2}
