--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -17,6 +17,7 @@
 \usepackage{float}
 \usepackage{tikz}
 \usetikzlibrary{decorations.pathreplacing}
+\usetikzlibrary{arrows.meta}
 \usepackage{mathtools}
 \usepackage{enumitem}
 \usepackage{calc}
