--- a/thesis/discussion.tex
+++ b/thesis/discussion.tex
@@ -3,11 +3,11 @@
 
 \subsection{Rotations}
 
-The two main ways the player can control the game is to rotate and move the blocks
+The two main ways the player can control the Lumines game found on the PSP is to rotate and move the blocks left and right. In the reduction given in this report a simplified model where the player is not allowed to rotate the blocks has been used meaning an important part of the game is not considered in the proof. It was planned to find a reduction which included rotations but because of time constraints this was not executed and a model without rotations was used instead. Intuitively rotation should have some impact on the hardness of the game. Because of the fact we found it harder to find a proper reduction of the Subset sum when a rotation model was used the possibility that Lumines is actually easier than NP-hard exist. However this does not have to be the case, rotations may as well be harder if it could be proven that an algorithm have to consider all possible ways to build terrain. During this project nothing has been found that tells us how rotations change the complexity and should therefore be examined to get a better understanding of the real game's complexity.
 
 \subsection{Sweep-line}
 
-In Lumines the sweep-line moves in a constant speed from left to right. The marked squares are cleared when the sweep-line reach the right side of the gameboard. The simplified Lumines instance that is presented in this paper uses an instant sweep-line. This means the blocks are cleared when a new block is fixed which is similar to how rows are cleared in Tetris but not the most true representation of how the sweep-line works in Lumines. There is probably a lot of different ways to make better models of the real sweep-line. For example, we could clear on every $n\text{th}$ block that is fixed to imitate a moving sweep-line where $n$ is an appropriate integer. The instant model was chosen because it was easier to find and prove a reduction in the time given for the project. In future work we would like to inquire into what impact the sweep-line has on the computational complexity and if there would be any significant results using a better model.
+In Lumines the sweep-line moves in a constant speed from left to right. The marked squares are cleared when the sweep-line reach the right side of the gameboard. The simplified Lumines instance that is presented in this paper uses an instant sweep-line. This means the blocks are cleared when a new block is fixed which is similar to how rows are cleared in Tetris but not the most true representation of how the sweep-line works in Lumines. There is probably a lot of different ways to make better models of the real sweep-line. For example, we could clear on every $n\text{th}$ block that is fixed to imitate a moving sweep-line where $n$ is an appropriate integer. The instant model was chosen because it was easier to find and prove a reduction in the time given for the project. The amount of cells that can be cleared given a sequence can change dramatically given different models of the sweepline (see \textbf{todo figure showing this}). Therefore in future work we would like to inquire into what impact the sweep-line has on the computational complexity and if there would be any significant results using another model more similar to the real game.
 
 \subsection{Online Lumines}
 
