--- a/thesis/background.tex
+++ b/thesis/background.tex
@@ -42,7 +42,7 @@ Tetris is a popular puzzle game where the player is given a sequence of tetromin
 \subsection{Lumines and its similarities to Tetris}
 \label{subsub:sim}
 
-The existing research on Lumines largely focus on effective strategies. One paper states that there exists strategies that can never lose, no matter what sequence of pieces are dropped \cite{lumines}. This is different to Tetris where losing can be inevitable if the computer is allowed to change the sequence according to how the player organizes the pieces \cite[p. 4]{tetris}. Another relevant difference the brought up in prior research is that in Lumines it is possible to create terrain that can not be cleared, while in Tetris a gameboard can always be cleared if the player is given an appropriate sequence of pieces.
+The existing research on Lumines largely focus on effective strategies. One paper states that there exists strategies that can never lose, no matter what sequence of pieces are dropped \cite{lumines}. This is different to Tetris where losing can be inevitable if the computer is allowed to change the sequence according to how the player organizes the pieces \cite[p. 4]{tetris}. Another relevant difference brought up in prior research is that in Lumines it is possible to create terrain that can not be cleared, while in Tetris a gameboard can always be cleared if the player is given an appropriate sequence of pieces.
 
 The standard Lumines game is played on a $10 \times 16$-gameboard, while standard Tetris is played on a $20 \times 10$-gameboard. In both games, when any block is fixed outside of the gameboard the player loses the game. While in Tetris a completed row is removed instantly, the marked cells in Lumines is not removed until the sweep-line has scanned the area.
 
