--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -125,10 +125,13 @@ If at any point the player forms a monochromatic $2 \times 2$ square, all cells 
 
 The version of Lumines found in the actual video games is played on a $10 \times 16$-gameboard. The goal of the standard game mode in Lumines is to survive, to keep placing blocks inside the gameboard, for as long as possible and clear as much terrain as possible in the process. The blocks given to the player is generated randomly, and 3-block lookahead is provided. The game starts on partially filled gameboard, which varies in size depending on the difficulty level \cite{lumines}.
 
-\subsection{Problem statement}
-This report considers the generalized version of the game, which is played on an $n \times m$-gameboard. The authors seek to formalize and  simplify Lumines, and explore this new system's computational complexity characteristics. Certain goals of the game are considered by translating them into decision problems in this system.
+\subsection{Online and offline}
+In Lumines all blocks given to the player are generated using a pseudorandom number generator. The player will therefore not know what blocks to expect after the three blocks given from the lookahead. In this report this will be refered to as the \textit{online} version of the game. In contrast to online Lumines we will refer to the game where all blocks are known beforehand as the \textit{offline} version of the game.
 
-While the sweep-line is a core characteristic of Lumines, this report considers all marked terrain as instantly cleared. Furthermore the whole sequence of blocks is considered to be known beforehand. This will be referred to as the \textit{offline} version of the game, in contrast to the \textit{online} version, where the blocks are generated probabilistically as in the actual video game. These are the two main simplifications, although a more thorough discussion is provided in \nameref{method}. The impact of these simplifications on the validity of the results is considered in \nameref{discussion}.
+\subsection{Problem statement}
+This report considers the generalized version of the game, which is played on an $n \times m$-gameboard. The authors seek to formalize and simplify Lumines, and explore this new system's computational complexity characteristics. Certain goals of the game are considered by translating them into decision problems in this system.
+
+While the sweep-line is a core characteristic of Lumines, this report considers all marked terrain as instantly cleared. Furthermore the report will consider the offline version of the game. These are the two main simplifications, although a more thorough discussion is provided in \nameref{method}. The impact of these simplifications on the validity of the results is considered in \nameref{discussion}.
 
 The main Lumines goals this paper examines are:
 \begin{itemize}
