--- a/thesis/discussion.tex
+++ b/thesis/discussion.tex
@@ -11,4 +11,4 @@ In Lumines the sweep-line moves in a constant speed from left to right. The mark
 
 \subsection{Online Lumines}
 
-In the reduction and proof of Lumines complexity presented in this paper the offline version of Lumines has been considered. This is similar to previous studies on Match-three games and Tetris. In these reports they argue that if a property can be shown in the offline version of the games intuitively it should not be easier in the online version. According to Demaine, Hoffman and Holzer, ``...it is only easier to play Tetris with complete knowledge of the future, so the difficulty of playing the offline version suggests the difficulty of playing the online version'' \cite[p. 2]{tetris}. This should also be the case for Lumines although we do not have a proof that this is the case. Therefore the online version of Lumines should be examined in the future to get a better understanding of the real game's complexity.
+In the reduction and proof of Lumines complexity presented in this paper the offline version of Lumines has been considered. This is similar to previous studies on Match-three games and Tetris. In these reports they argue that if a property can be shown in the offline version of the games intuitively it should not be easier in the online version. According to Demaine, Hoffman and Holzer, ``...it is only easier to play Tetris with complete knowledge of the future, so the difficulty of playing the offline version suggests the difficulty of playing the online version'' \cite[p. 2]{tetris}. If this is true it should also be the case for Lumines. However we do not have a proof that this is the case. Therefore the online version of Lumines should be examined in the future to get a better understanding of the real game's complexity.
