--- a/pkg/cells.tex
+++ b/pkg/cells.tex
@@ -117,3 +117,27 @@
     \cellw{#1}{#2+1}
     \cellb{#1+1}{#2+1}
 }
+
+\newcommand{\ponemid}[2]
+{
+    \cellw{#1}{#2}
+    \cellb{#1+1}{#2}
+    \cellw{#1+2}{#2}
+    \cellw{#1+3}{#2}
+    \stripeb{#1}{#2+1}
+}
+
+\newcommand{\invariantchart}[2]
+{
+    \wellbot{#1}{#2}
+    \draw[dotted] (#1+2, #2+2) -- (#1+2, #2+4);
+    \wellbot{#1}{#2+4}
+    \topblock{#1}{#2+6}
+    \draw[dotted] (#1+2, #2+8) -- (#1+2, #2+10);
+    \topblock{#1}{#2+10}
+    \ponemid{#1}{#2+12}
+    \draw[dotted] (#1+2, #2+14) -- (#1+2, #2+16);
+    \ponemid{#1}{#2+16}
+    \ponemid{#1}{#2+18}
+    \wellclosed{#1}{#2+20}
+}
