--- a/thesis/phase1.tex
+++ b/thesis/phase1.tex
@@ -113,3 +113,63 @@ Since later in the proof it will become apparent that having a permanently close
     \caption{Block placement in phase 1}
     \label{fig:placement}
 \end{figure}
+
+Assuming that no blocks has been place such that any well is permanently closed, the following invariants holds at the start of the sequence corresponding to $q_i$:
+
+\begin{enumerate}
+\item Either both of the wells are closed, or both of the wells are open.
+
+\item Column 1, 3 and 5 in any well are unchanged from the initial gameboard. Column 2 is unchanged except from the top two rows (which may be black or empty).
+
+\item Let $q_0 = 0$. This does not change the semantics of the givet \textit{Subset sum} instance. Then in total 
+\begin{equation*}
+    2 \left( i-1 \right) + \sum_{j=0}^{i-1} q_j
+\end{equation*}
+blocks has been placed.
+
+\item Since each block placement clears exactly 4 cells
+\begin{equation*}
+    8 \left( i-1 \right) + 4 \sum_{j=0}^{i-1} q_j
+\end{equation*}
+cells has been cleared.
+
+\item There exists: 
+    \begin{equation*}
+        M_1, M_2 \subseteq \{q_0, \ldots q_{i-1}\}, M_1 \cap M_2 = \varnothing, M_1 \cup M_2 = \{q_0, \ldots, q_{i-1}\}
+    \end{equation*}
+such that for any well $w \in \{1,2\}$ it holds that the rows in interval
+    \begin{equation*}
+        \left[ 2 \left( K-1 + \sum Q - \sum M_w \right) +1, 2 \left( K-1 + \sum Q \right) \right]
+    \end{equation*}
+consists of white cells in column 4, and the rows in interval
+    \begin{equation*}
+        \left[ 1, 2 \left( K-1 + \sum Q - \sum M_w \right) \right]
+    \end{equation*}
+consists of black cells in column 4.
+\end{enumerate}
+
+\begin{figure}[H]
+    \centering
+    \resizebox{!}{0.3\paperheight}{
+    \begin{tikzpicture}
+        \invariantchart{0}{0}
+        \draw[dashed] (-1, 0) -- (6, 0);
+        \draw[dashed] (-1, 6) -- (6, 6);
+        \draw[dashed] (-1, 12) -- (6, 12);
+        \draw[dashed] (-1, 20) -- (6, 20);
+        \draw[dashed] (5, 0) -- (5, 22);
+        \draw [decorate,decoration={brace,amplitude=10pt},xshift=-12pt,yshift=0pt]
+        (0, 0) -- (0, 6) node [left,align=right,black,midway,xshift=-1cm]
+        {\huge $2 \left( K-1 \right)$ rows};
+        \draw [decorate,decoration={brace,amplitude=10pt},xshift=-12pt,yshift=0pt]
+        (0, 6) -- (0, 12) node [left,align=right,black,midway,xshift=-1cm]
+        {\huge $2 \left( \sum Q - \sum M_w \right)$ rows};
+        \draw [decorate,decoration={brace,amplitude=10pt},xshift=-12pt,yshift=0pt]
+        (0, 12) -- (0, 20) node [left,align=right,black,midway,xshift=-1cm]
+        {\huge $2 \sum M_w $ rows};
+    \end{tikzpicture}
+    }
+    \caption{Depiction of invariants}
+    \label{fig:invariant}
+\end{figure}
+
