--- a/thesis/phase1.tex
+++ b/thesis/phase1.tex
@@ -1,4 +1,5 @@
 \subsubsection{Phase 1}
+\label{subsub:phaseone}
 In this phase we transform every $q_i \in Q$ to sequences of game blocks. These sequences will be part of the block states $P_1, \ldots P_n$ in the constructed \textit{k-cleared-cells} instance. The transformation is done by creating a sequence of 1 $\mathbf{H}_{H}$, $q_i$ $\mathbf{H}$ and 1 $\mathbf{H}_H$ blocks (in their initial state) for each give $q_i$.
 
 \begin{figure}[H]
