--- a/thesis/nphard.tex
+++ b/thesis/nphard.tex
@@ -5,7 +5,7 @@ We prove that k-cleared-cells is NP-hard by constructing a reduction from the \t
 The goal of each part is to prove the following: 
 
 \begin{quote}
-Given a \textit{Subset sum} instance $Q = \{q_1, \ldots, q_a\}, K \in \{1\} ,\{2, 3, \ldots \}$, there exists a solution $S = \{s_1, \ldots, s_b \} \subseteq Q, \sum Q = K$ if and only if there exists a trajectory sequence $\phi$ which clears $k$ cells in game $G$ in some instance of \textit{k-cleared-cells}.
+Given a \textit{Subset sum} instance $Q = \{q_1, \ldots, q_a\}, K \in \{1\}$ respectively $\{2, 3, 4, \ldots \}$, there exists a solution $S = \{s_1, \ldots, s_b \} \subseteq Q, \sum S = K$ if and only if there exists a trajectory sequence $\phi$ which clears $k$ cells in game $G$ in some instance of \textit{k-cleared-cells}.
 \end{quote}
 
 \input{thesis/gameboard.tex}
