--- a/thesis/nphard.tex
+++ b/thesis/nphard.tex
@@ -13,3 +13,5 @@ Given a \textit{Subset sum} instance $Q = \{q_1, \ldots, q_a\}, K \in \{1\} ,\{2
 \input{thesis/phase1.tex}
 
 \input{thesis/phase2.tex}
+
+\input{thesis/phase3.tex}
