--- a/thesis/phase3.tex
+++ b/thesis/phase3.tex
@@ -8,14 +8,14 @@ In this phase the sequence $(\mathbf{MB}, \mathbf{MW), \mathbf{X}$ is generated.
         \resizebox{\linewidth}{!}{
             \begin{tikzpicture}
             \ptwoclosed{0}{0}
-            \stopb{1}{8}
+            \lummonoblack{1}{8}
             \draw[dashed] (0, 0) -- (0, 10);
             \draw[dashed] (5, 0) -- (5, 10);
             \draw[->, line width=5pt] (6, 5) -- (9, 5);
             \ptwoclosed{10}{0}
             \draw[dashed] (10, 0) -- (10, 10);
             \draw[dashed] (15, 0) -- (15, 10);
-            \stopb{11}{6}
+            \lummonowhite{11}{6}
             \end{tikzpicture}
         }
         \caption{}
