--- a/thesis/phase3.tex
+++ b/thesis/phase3.tex
@@ -1,6 +1,6 @@
 \subsubsection{Phase 3}
 
-In this phase the sequence $(\mathbf{MB}, \mathbf{MW), \mathbf{X}$ is generated. According to the reasoning in~\nameref{phase2} the game must either be in an unplayable state or be in a state such that one well is permanently closed and the other well has the appearance pictured in~\autoref{fig:openclosed}. The well that is not permanently closed can thus be in one of two possible states. For each case there is exactly one way of placing the block sequence such that this well is not also permanently closed. Placing the blocks in this way will clear 10 cells regardless of case.
+In this phase the sequence $\left( \mathbf{MB}, \mathbf{MW}, \mathbf{X} \right)$ is generated. According to the reasoning in~\nameref{phase2} the game must either be in an unplayable state or be in a state such that one well is permanently closed and the other well has the appearance pictured in~\autoref{fig:openclosed}. The well that is not permanently closed can thus be in one of two possible states. For each case there is exactly one way of placing the block sequence such that this well is not also permanently closed. Placing the blocks in this way will clear 10 cells regardless of case.
 
 \begin{figure}[H]
     \centering
@@ -15,7 +15,8 @@ In this phase the sequence $(\mathbf{MB}, \mathbf{MW), \mathbf{X}$ is generated.
             \ptwoclosed{10}{0}
             \draw[dashed] (10, 0) -- (10, 10);
             \draw[dashed] (15, 0) -- (15, 10);
-            \lummonowhite{11}{6}
+            \lummonowhite{11}{8}
+            \draw[->, line width=5pt] (16, 5) -- (19, 5);
             \end{tikzpicture}
         }
         \caption{}
