--- a/thesis/phase3.tex
+++ b/thesis/phase3.tex
@@ -17,28 +17,38 @@ In this phase the sequence $\left( \mathbf{MB}, \mathbf{MW}, \mathbf{X} \right)$
             \draw[dashed] (15, 0) -- (15, 10);
             \lummonowhite{11}{8}
             \draw[->, line width=5pt] (16, 5) -- (19, 5);
+            \pthreeone{20}{0}
+            \stopb{21}{8}
+            \draw[dashed] (20, 0) -- (20, 10);
+            \draw[dashed] (25, 0) -- (25, 10);
             \end{tikzpicture}
         }
         \caption{}
+         \vspace*{1cm}
     \end{subfigure}
 
     \begin{subfigure}[b]{0.8\textwidth}
         \resizebox{\linewidth}{!}{
             \begin{tikzpicture}
             \ptwoopen{0}{0}
-            \stopb{2}{8}
+            \lummonoblack{2}{8}
             \draw[dashed] (0, 0) -- (0, 10);
             \draw[dashed] (5, 0) -- (5, 10);
             \draw[->, line width=5pt] (6, 5) -- (9, 5);
-            \ptwoopen{10}{0}
-            \stopb{12}{6}
+            \pthreeone{10}{0}
             \draw[dashed] (10, 0) -- (10, 10);
             \draw[dashed] (15, 0) -- (15, 10);
+            \lummonowhite{11}{8}
+            \draw[->, line width=5pt] (16, 5) -- (19, 5);
+            \pthreeone{20}{0}
+            \stopb{21}{8}
+            \draw[dashed] (20, 0) -- (20, 10);
+            \draw[dashed] (25, 0) -- (25, 10);
             \end{tikzpicture}
         }
         \caption{}
     \end{subfigure}
 
-    \caption{Possible cases in phase 2}
+    \caption{Block placement in phase 3}
     \label{fig:placement}
 \end{figure}
