--- a/pkg/blocks.tex
+++ b/pkg/blocks.tex
@@ -8,6 +8,11 @@
     \filldraw[fill=gray, draw=black] (#1, #2) rectangle (#1+1, #2+1);
 }
 
+\newcommand{\cellr}[2]
+{
+    \filldraw[fill=red, draw=black] (#1, #2) rectangle (#1+1, #2+1);
+}
+
 \newcommand{\lummonowhite}[2]
 {
     \cellw{#1}{#2}
