--- a/pkg/cells.tex
+++ b/pkg/cells.tex
@@ -205,3 +205,63 @@
     \checkbox{#1}{#2+18}
     \wellblocked{#1}{#2+20}
 }
+
+\newcommand{\collapsepre}[2]
+{
+    \wellbot{#1}{#2}
+    \draw[dotted] (#1+2, #2+2) -- (#1+2, #2+4);
+    \checkbox{#1}{#2+4}
+    \checkbox{#1}{#2+6}
+    \cellr{#1+2}{#2+4}
+    \cellr{#1+3}{#2+4}
+    \cellr{#1+2}{#2+5}
+    \cellr{#1+3}{#2+5}
+    \cellr{#1+2}{#2+6}
+    \cellr{#1+3}{#2+6}
+    \draw[dotted] (#1+2, #2+8) -- (#1+2, #2+10);
+    \checkbox{#1}{#2+10}
+    \checkbox{#1}{#2+12}
+    \draw[dotted] (#1+2, #2+14) -- (#1+2, #2+16);
+    \checkbox{#1}{#2+16}
+    \checkbox{#1}{#2+18}
+    \wellblocked{#1}{#2+20}
+}
+
+\newcommand{\collapsemid}[2]
+{
+    \cellw{#1}{#2}
+    \cellb{#1+1}{#2}
+    \cellb{#1+2}{#2}
+    \cellw{#1+3}{#2}
+
+    \cellb{#1}{#2+1}
+    \cellw{#1+1}{#2+1}
+    \cellw{#1+2}{#2+1}
+    \cellw{#1+3}{#2+1}
+}
+
+\newcommand{\collapsetop}[2]
+{
+    \cellw{#1}{#2}
+    \cellb{#1+1}{#2}
+    \cellb{#1+2}{#2}
+    \cellw{#1+3}{#2}
+
+    \cellb{#1}{#2+1}
+    \cellw{#1+1}{#2+1}
+    \cellw{#1+2}{#2+1}
+    \cellb{#1+3}{#2+1}
+}
+
+\newcommand{\collapsepost}[2]
+{
+    \wellbot{#1}{#2}
+    \draw[dotted] (#1+2, #2+2) -- (#1+2, #2+4);
+    \collapsemid{#1}{#2+4}
+    \collapsemid{#1}{#2+6}
+    \draw[dotted] (#1+2, #2+8) -- (#1+2, #2+10);
+    \collapsetop{#1}{#2+10}
+    \collapsetop{#1}{#2+12}
+    \draw[dotted] (#1+2, #2+14) -- (#1+2, #2+16);
+    \collapsetop{#1}{#2+16}
+}
