--- a/pkg/cells.tex
+++ b/pkg/cells.tex
@@ -253,6 +253,31 @@
     \cellb{#1+3}{#2+1}
 }
 
+\newcommand{\collapsehat}[2]
+{
+    \cellw{#1}{#2}
+    \cellb{#1+1}{#2}
+    \cellb{#1+2}{#2}
+    \cellw{#1+3}{#2}
+
+    \cellb{#1}{#2+1}
+    \cellw{#1+1}{#2+1}
+    \cellw{#1+2}{#2+1}
+
+    \cellw{#1}{#2+2}
+    \cellb{#1+1}{#2+2}
+    \cellb{#1+2}{#2+2}
+
+    \cellb{#1}{#2+3}
+    \cellw{#1+1}{#2+3}
+
+    \cellw{#1}{#2+4}
+    \cellb{#1+1}{#2+4}
+
+    \cellb{#1}{#2+5}
+    \cellw{#1+1}{#2+5}
+}
+
 \newcommand{\collapsepost}[2]
 {
     \wellbot{#1}{#2}
@@ -263,5 +288,5 @@
     \collapsetop{#1}{#2+10}
     \collapsetop{#1}{#2+12}
     \draw[dotted] (#1+2, #2+14) -- (#1+2, #2+16);
-    \collapsetop{#1}{#2+16}
+    \collapsehat{#1}{#2+16}
 }
