--- a/thesis/phase4.tex
+++ b/thesis/phase4.tex
@@ -65,6 +65,17 @@ The placement of block $\sum Q - \sum M_w + 1$, and the subsequent collapse of c
         \node at (4.5, -0.5) {\large 5};
         \draw[->, line width=10pt] (6, 11) -- (9, 11);
         \collapsepost{10}{0}
+        \draw[dashed] (9, 0) -- (15, 0);
+        \draw[dashed] (9, 6) -- (15, 6);
+        \draw[dashed] (9, 12) -- (15, 12);
+        \draw[dashed] (9, 20) -- (15, 20);
+        \draw[dashed] (15, 0) -- (15, 22);
+        \node at (10.5, -0.5) {\large 1};
+        \node at (11.5, -0.5) {\large 2};
+        \node at (12.5, -0.5) {\large 3};
+        \node at (13.5, -0.5) {\large 4};
+        \node at (14.5, -0.5) {\large 5};
+
     \end{tikzpicture}
     }
     \caption{Collapsing of well $w$}
