--- a/thesis/phase2.tex
+++ b/thesis/phase2.tex
@@ -1,5 +1,5 @@
 \subsubsection{Phase 2}
-In this phase a single $\mathbf{X}_H$ block is generated. From the invariants presented in~\ref{subsub:phaseone} we know that the top of the two wells must look one of the two cases in~\autoref{fig:openclosed}. Thus the only non-losing option is to place the $\mathbf{X}_H$ block in such a way that it closes one of the wells permanently. Note that if any well was permanently closed before this phase, this placement renders both of the wells permanently closed, making it impossible to clear any more cells during the game.
+In this phase a single $\mathbf{X}_H$ block is generated. From the invariants presented in~\ref{subsub:phaseone} we know that the top of the two wells must be in one of the two states presented in~\autoref{fig:openclosed}. Thus the only non-losing option is to place the $\mathbf{X}_H$ block in such a way that it closes one of the wells permanently. Note that if any well was permanently closed before this phase, this placement renders both of the wells permanently closed, making it impossible to clear any more cells during the game.
 
 \begin{figure}[H]
     \centering
