--- a/thesis/phase1.tex
+++ b/thesis/phase1.tex
@@ -22,11 +22,6 @@ In this phase we transform every $q_i \in Q$ to sequences of game blocks. These 
 
 When placing the first block it is evident that we have only two choices: place the $\mathbf{H}_H$ block column 2-3 of any well. This transform the chosen well from a closed to an open state. We then proceed to placing the middle $q_i$ blocks. When deciding the outcome of these placements the following lemmas are of use:\\
 
-\begin{lem}
-TODO: prove that the height doesn't change in the columns in phase 1. Important for second lemma.
-\end{lem}
-
-\bigbreak
 
 \begin{lem}
 \label{lem:permclose}
@@ -37,6 +32,22 @@ In phase 1, placing a $\mathbf{H}$ block in any other column than 4-5 in a well 
 In the first case, the well is closed. We can only place the $\mathbf{H}$ block in column 2-3. Since no cells are cleared as a result, column 1 to 4 are filled except for the top two rows. We therefore cannot place any block in these columns without a game over. Either the column right of column 5 is filled, or the gameboard has ended. Since column 4 is also filled, we cannot place any block in column 5. Thus the well is permanently closed.
 
 In the second case, the well is open. Apart from column 4-5, the $\mathbf{H}$ block can only be placed in column 3-4. This does not clear any cells as a result. Thus with the same arguments as in the first case, the well is permanently closed.
+\end{proof}
+
+\bigbreak
+
+\begin{lem}
+In phase 1, for each well: Column 1 is unchanged. Column 2-4 will always be filled below row $2 \left( \sum Q + K + 1 \right) - 3$. Column 5 is always empty as long as the well is not blocked.
+\end{lem}
+
+\begin{proof}
+The following facts hold for each column:
+
+Column 1 can not be cleared because alternating rows to the top \textbf{todo prove, maybe show somewhere else}
+
+Column 2 is initially filled below row $2 \left( \sum Q + K + 1 \right) - 3$ with alternating rows and forms a checkered terrain with column 3 in the interval $\left[ 2 \left( K - 1 \right) + 1, 2 \left( \sum Q + K + 1 \right) - 3 \right]$. Because column 2 has alternating rows there is no way to clear rows from anywhere except the top of the column. It is known that column 1 can not be cleared which leaves two requirements to clear any of the cells claimed to always be filled in column 2: Column 3 must leave place for a white cell at $2 \left( \sum Q + K + 1 \right) - 4$ and a fitting piece must be dropped to create a white $2 \times 2$ block. Both of these requirements are unfulfilled but we will only prove the first requirement.
+
+Column 3 is initially filled below $2 \left( \sum Q + K + 1 \right) - 3$. The interval $\left[ 2 \left( K - 1 \right) + 1, 2 \left( \sum Q + K + 1 \right) - 3 \right]$ consists of alternating rows. Beneath $2 \left( K - 1 \right) + 1$ the column is filled with white cells. In a closed well rows in column 3 can only be cleared if column 2 leaves place 
 \end{proof}
 
 Since later in the proof it will become apparent that having a permanently closed well makes it impossible to construct a optimal trajectory sequence, lemma~\ref{lem:permclose} leaves us no choice but to place all $\mathbf{H}$ blocks in column 4-5 of the open well. Finally the last $\mathbf{H}_H$ block must be placed either in column 2-3 of a closed well, or column 3-4 of an open well, in order to not permanently close a well.
