--- a/pkg/cells.tex
+++ b/pkg/cells.tex
@@ -278,6 +278,22 @@
     \cellw{#1+1}{#2+5}
 }
 
+\newcommand{\collapsesmallhat}[2]
+{
+    \cellw{#1}{#2}
+    \cellb{#1+1}{#2}
+    \cellb{#1+2}{#2}
+    \cellw{#1+3}{#2}
+
+    \cellb{#1}{#2+1}
+    \cellw{#1+1}{#2+1}
+    \cellw{#1+2}{#2+1}
+
+    \cellw{#1}{#2+2}
+    \cellb{#1+1}{#2+2}
+    \cellb{#1+2}{#2+2}
+}
+
 \newcommand{\collapsepost}[2]
 {
     \wellbot{#1}{#2}
@@ -289,4 +305,20 @@
     \collapsetop{#1}{#2+12}
     \draw[dotted] (#1+2, #2+14) -- (#1+2, #2+16);
     \collapsehat{#1}{#2+16}
+}
+
+\newcommand{\collapselast}[2]
+{
+    \wellbot{#1}{#2}
+    \draw[dotted] (#1+2, #2+2) -- (#1+2, #2+4);
+    \wellbot{#1}{#2+4}
+    \collapsemid{#1}{#2+6}
+    \draw[dotted] (#1+2, #2+8) -- (#1+2, #2+10);
+    \collapsemid{#1}{#2+10}
+    \collapsetop{#1}{#2+12}
+    \draw[dotted] (#1+2, #2+14) -- (#1+2, #2+16);
+    \collapsesmallhat{#1}{#2+16}
+    \lumx{#1}{#2+19}
+    \draw[dotted] (#1+1, #2+21) -- (#1+1, #2+23);
+    \lumx{#1}{#2+23}
 }
