--- a/thesis/nphard.tex
+++ b/thesis/nphard.tex
@@ -17,3 +17,5 @@ Given a \textit{Subset sum} instance $Q = \{q_1, \ldots, q_a\}, K \in \{1\}$ res
 \input{thesis/phase3.tex}
 
 \input{thesis/phase4.tex}
+
+\input{thesis/phase5.tex}
