--- a/thesis/phase5.tex
+++ b/thesis/phase5.tex
@@ -1,5 +1,33 @@
 \subsubsection{Phase 5}
-When the open well has collapse the last phase is entered. In this phase the remaining $\sum M_w - 2$ blocks are placed. The purpose of this phase is to both clear the remaning black cells in column 4, and clear the remaining white cells in column 3 and 4 by making them meet.
+When the open well has collapsed the last phase is entered. In this phase the remaining $\sum M_w - 2$ blocks are placed. The purpose of this phase is to both clear the remaning black cells in column 4, and clear the remaining white cells in column 3 and 4 by making them meet. Let $i = 0$ when block $\sum Q -  \sum M_w + 2$ is about to the place, let $i = i +1$ when a block has been placed in column 4-5. Then the following invariants hold for the open well $w$:
+
+\begin{enumerate}
+\item Column 5 is empty
+\item The rows in column 1 are alternating white-black (from the bottom). The rows in column 2 are alternating black-white.
+\item In the interval below, the rows in column 3 are white and the rows in column 4 are black:
+\begin{equation*}
+    \left[1, \left( K - 2 -i \right)\right]
+\end{equation*}
+\item In the interval below, the rows in column 3 are alternating black-white and the rows in column 4 are white:
+\begin{equation*}
+    \left[2 \left( K-2-i\right) +1, 2 \left(\sum M_w + K -4 -2i \right)\right]
+\end{equation*}
+\item In the interval below, the rows in column 3 are alternating black-white and the rows in column 4 are alternating white-black:
+\begin{equation*}
+    \left[ 2 \left(\sum M_w + K -4 -2i \right) +1, 2 \left( \sum Q + K - 3 -i\right) + 1 \right]
+\end{equation*}
+\item In the interval below, the rows in column 3 are alternating white-black and the rows in column 4 are empty:
+\begin{equation*}
+    \left[ 2 \left( \sum Q + K - 2 -i\right), 2 \left( \sum Q + K - 2 -i \right)+1 \right]
+\end{equation*}
+\item In the interval below, the rows in column 3 and 4 are empty:
+\begin{equation*}
+    \left[ 2 \left( \sum Q + K - 1 -i\right), 2 \left( \sum Q + K \right) \right]
+\end{equation*}
+
+\end{enumerate}
+
+This invariants are pictured in~\autoref{fig:invariantsfive}
 
 \begin{figure}[H]
     \centering
@@ -53,7 +81,7 @@ When the open well has collapse the last phase is entered. In this phase the rem
         {\huge row $2 \left( \sum Q + K - 3 - i \right)+1$};
 
         \draw (3.5, 19.5) -- (7, 19.5) node [right, black, xshift=1cm] 
-        {\huge row $2 \left( \sum Q + K - 2  - i \right)+1$};
+        {\huge row $2 \left( \sum Q + K - 1 - i \right)+1$};
 
         \draw (3.5, 24.5) -- (7, 24.5) node [right, black, xshift=1cm] 
         {\huge row $2 \left( \sum Q + K \right)$};
@@ -61,4 +89,55 @@ When the open well has collapse the last phase is entered. In this phase the rem
     }
     \caption{Depiction of invariants in phase 5}
     \label{fig:invariantsfive}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \resizebox{!}{0.3\paperheight}{
+    \begin{tikzpicture}
+        \allplaced{0}{0}
+        \draw[dashed] (-1, 0) -- (6, 0);
+        \draw[dashed] (-1, 6) -- (6, 6);
+        \draw[dashed] (-1, 11) -- (6, 11);
+        \draw[dashed] (-1, 13) -- (6, 13);
+        \draw[dashed] (-1, 19) -- (6, 19);
+        \draw[dashed] (5, 0) -- (5, 19);
+        \node at (0.5, -0.5) {\large 1};
+        \node at (1.5, -0.5) {\large 2};
+        \node at (2.5, -0.5) {\large 3};
+        \node at (3.5, -0.5) {\large 4};
+        \node at (4.5, -0.5) {\large 5};
+        \draw [decorate,decoration={brace,amplitude=10pt},xshift=-12pt,yshift=0pt]
+        (0, 0) -- (0, 6) node [left,align=right,black,midway,xshift=-1cm]
+        {\huge $2 \left( K - M_w \right)$ rows};
+
+        \draw [decorate,decoration={brace,amplitude=10pt},xshift=-12pt,yshift=0pt]
+        (0, 6) -- (0, 11) node [left,align=right,black,midway,xshift=-1cm]
+        {\huge $2 \left( \sum Q - 1 \right) +1$ rows};
+
+        \draw [decorate,decoration={brace,amplitude=10pt},xshift=-12pt,yshift=0pt]
+        (0, 13) -- (0, 19) node [left,align=right,black,midway,xshift=-1cm]
+        {\huge $2 \sum M_w - 1$ rows};
+
+        \draw (3.5, 0.5) -- (7, 0.5) node [right, black, xshift=1cm] 
+        {\huge row 1};
+
+        \draw (3.5, 5.5) -- (7, 5.5) node [right, black, xshift=1cm, yshift=-0.5cm] 
+        {\huge row $2 \left( K-M_w \right)$};
+
+        \draw (3.5, 6.5) -- (7, 6.5) node [right, black, xshift=1cm, yshift=0.5cm] 
+        {\huge row $2 \left( K-M_w \right) + 1$};
+
+        \draw (3.5, 10.5) -- (7, 10.5) node [right, black, xshift=1cm, yshift=-0.5cm] 
+        {\huge row $2 \left( \sum Q + K - M_w - 1 \right)+1$};
+
+        \draw (3.5, 13.5) -- (7, 13.5) node [right, black, xshift=1cm] 
+        {\huge row $2 \left( \sum Q + K - M_q + 1 \right)$};
+
+        \draw (3.5, 18.5) -- (7, 18.5) node [right, black, xshift=1cm] 
+        {\huge row $2 \left( \sum Q + K \right)$};
+    \end{tikzpicture}
+    }
+    \caption{Gameboard after each block has been placed}
+    \label{fig:afterplace}
 \end{figure}
