--- a/pkg/cells.tex
+++ b/pkg/cells.tex
@@ -322,3 +322,16 @@
     \draw[dotted] (#1+1, #2+21) -- (#1+1, #2+23);
     \lumx{#1}{#2+23}
 }
+
+\newcommand{\allplaced}[2]
+{
+    \wellbot{#1}{#2}
+    \draw[dotted] (#1+2, #2+2) -- (#1+2, #2+4);
+    \wellbot{#1}{#2+4}
+    \collapsetop{#1}{#2+6}
+    \draw[dotted] (#1+2, #2+8) -- (#1+2, #2+10);
+    \collapsesmallhat{#1}{#2+10}
+    \lumx{#1}{#2+13}
+    \draw[dotted] (#1+1, #2+15) -- (#1+1, #2+17);
+    \lumx{#1}{#2+17}
+}
